2207
Assertion error fixed in r18635 as fix for SI-2305. 

Martin: should *scalac* successfully compile the *Java* file, or is the following error expected? 

{code}
TestArrayList.java:1: error: missing type arguments
class TestArrayList extends java.util.ArrayList {
                                      ^
one error found
{code}
